# coingecko-pulse

./: .gitignore  ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: EXAMPLES_20260709.md  QD.md  USAGE.md
src/coingecko_pulse/: __main__.py  cli.py  client.py
tests/: test_client_unit.py  test_format_mcap.py  test_format_pct.py  test_format_price_extra.py  test_format_price_line.py  test_format_usd.py  test_normalize.py  test_version.py
