[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coingecko-pulse"
version = "0.1.0"
description = "Zero-key crypto market pulse CLI (CoinGecko public API) for DS notebooks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx>=0.27", "rich>=13.7", "typer>=0.12"]

[project.scripts]
cg-pulse = "coingecko_pulse.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
